--- a/pikachuBuy.html
+++ b/pikachuBuy.html
@@ -58,25 +58,25 @@
               <!-- Preview Image 1 -->
               <div class="row justify-content-center">
                 <div class="col-md-10 border preview">
-                  <img src="/images/pikachu/plush/plush1.jpg" onclick="myFunction(this);">
+                  <img src="./images/pikachu/plush/plush1.jpg" onclick="myFunction(this);">
                 </div>
               </div>
               <!-- Preview Image 2 -->
               <div class="row justify-content-center">
                 <div class="col-md-10 border preview">
-                  <img src="/images/pikachu/plush/plush2.jpg" onclick="myFunction(this);">
+                  <img src="./images/pikachu/plush/plush2.jpg" onclick="myFunction(this);">
                 </div>
               </div>
               <!-- Peview Image 3 -->
               <div class="row justify-content-center">
                 <div class="col-md-10 border preview">
-                  <img src="/images/pikachu/plush/plush3.jpg" onclick="myFunction(this);">
+                  <img src="./images/pikachu/plush/plush3.jpg" onclick="myFunction(this);">
                 </div>
               </div>
             </div>
             <!-- Actual Image -->
             <div class="col-md-6 justify-content-center my-auto ">
-              <img id="expandedImg" src="/images/pikachu/plush/plush1.jpg">
+              <img id="expandedImg" src="./images/pikachu/plush/plush1.jpg">
             </div>
           </div>
           <!-- Row -->
