Re organized images

--- a/confirmation.html
+++ b/confirmation.html
@@ -27,7 +27,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Home</title>
-  <link rel="icon" type="image/x-icon" href="pokeball.png">
+  <link rel="icon" type="image/x-icon" href="./assets/pokeball.png">
 
 
   <!-- Custom CSS -->
@@ -67,7 +67,7 @@
 <body>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="index.html">
-      <img src="./pokeIcons/pokedexIcon.png" height="30" class="d-inline-block align-top" alt="">
+      <img src="./assets/pokeIcons/pokedexIcon.png" height="30" class="d-inline-block align-top" alt="">
       Home
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -78,19 +78,19 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="store.html">
-            <img src="./pokeIcons/poke-storeIcon.png " height="30" class="d-inline-block align-top" alt="">
+            <img src="./assets/pokeIcons/poke-storeIcon.png " height="30" class="d-inline-block align-top" alt="">
             Store
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">
-            <img src="./pokeIcons/poke-wingIcon.png" height="30" class="d-inline-block align-top" alt="">
+            <img src="./assets/pokeIcons/poke-wingIcon.png" height="30" class="d-inline-block align-top" alt="">
             About
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="pokemon.html">
-            <img src="./pokeIcons/pokemon-icon.png" height="30" class="d-inline-block align-top" alt="">
+            <img src="./assets/pokeIcons/pokemon-icon.png" height="30" class="d-inline-block align-top" alt="">
             Pokedex
           </a>
         </li>
