--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="pokeball.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/pokeball.png" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -64,7 +64,7 @@
       <div
         class="p-5 text-center bg-image"
         style="
-          background-image: url('homebanner.png');
+          background-image: url('./assets/homebanner.png');
           height: 400px;
           background-size: cover;
           background-position: relative;
@@ -103,7 +103,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="store.html">
               <img
-                src="./pokeIcons/poke-storeIcon.png "
+                src="./assets/pokeIcons/poke-storeIcon.png "
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -114,7 +114,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">
               <img
-                src="./pokeIcons/poke-wingIcon.png"
+                src="./assets/pokeIcons/poke-wingIcon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -125,7 +125,7 @@
           <li class="nav-item">
             <a class="nav-link" href="pokemon.html">
               <img
-                src="./pokeIcons/pokemon-icon.png"
+                src="./assets/pokeIcons/pokemon-icon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -174,7 +174,7 @@
       </div>
       <div class="row" id="grad1">
         <div class="col-md-6">
-          <img src="pik.png" alt="Pikachu" />
+          <img src="./assets/pik.png" alt="Pikachu" />
         </div>
         <div class="col-md-6 videoFormat">
           <div class="iframe-container">
