--- a/store.html
+++ b/store.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Poke-Store</title>
-    <link rel="icon" type="image/x-icon" href="pokeball.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/pokeball.png" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="store.css" />
@@ -79,7 +79,7 @@
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
       <a class="navbar-brand" href="index.html">
         <img
-          src="./pokeIcons/pokedexIcon.png"
+          src="./assets/pokeIcons/pokedexIcon.png"
           height="30"
           class="d-inline-block align-top"
           alt=""
@@ -102,7 +102,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="store.html">
               <img
-                src="./pokeIcons/poke-storeIcon.png "
+                src="./assets/pokeIcons/poke-storeIcon.png "
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -113,7 +113,7 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">
               <img
-                src="./pokeIcons/poke-wingIcon.png"
+                src="./assets/pokeIcons/poke-wingIcon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -124,7 +124,7 @@
           <li class="nav-item">
             <a class="nav-link" href="pokemon.html">
               <img
-                src="./pokeIcons/pokemon-icon.png"
+                src="./assets/pokeIcons/pokemon-icon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -149,24 +149,24 @@
         <div class="row justify-content-center">
           <div class="col-md-3 icons" id="pikachuIcon">
             <a href="#sectionPikachu"
-              ><img src="./images/icons/pikachu.png"
+              ><img src="./assets/images/icons/pikachu.png"
             /></a>
             <h3>Pikachu</h3>
           </div>
           <div class="col-md-3 icons" id="charizardIcon">
             <a href="#sectionCharizard"
-              ><img src="./images/icons/charizard.png"
+              ><img src="./assets/images/icons/charizard.png"
             /></a>
             <h3>Charizard</h3>
           </div>
           <div class="col-md-3 icons" id="squirtleIcon">
             <a href="#sectionSquirtle"
-              ><img src="./images/icons/squirtle.png"
+              ><img src="./assets/images/icons/squirtle.png"
             /></a>
             <h3>Squirtle</h3>
           </div>
           <div class="col-md-3 icons" id="eeveeIcon">
-            <a href="#sectionEevee"><img src="./images/icons/eevee.png" /></a>
+            <a href="#sectionEevee"><img src="./assets/images/icons/eevee.png" /></a>
             <h3>Eevee</h3>
           </div>
         </div>
@@ -178,7 +178,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/pikachu/pikachu_charizard_plush.jpeg"
+                src="./assets/images/pikachu/pikachu_charizard_plush.jpeg"
                 alt="pikchu charizard themed plush"
               />
             </div>
@@ -211,7 +211,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/pikachu/pikachu_binder.jpeg"
+                src="./assets/images/pikachu/pikachu_binder.jpeg"
                 alt="pikachu binder"
               />
             </div>
@@ -246,7 +246,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/pikachu/pikachu_sweater.jpg"
+                src="./assets/images/pikachu/pikachu_sweater.jpg"
                 alt="pikachu sweater"
               />
             </div>
@@ -281,7 +281,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/pikachu/pikachu_headphones.jpg"
+                src="./assets/images/pikachu/pikachu_headphones.jpg"
                 alt="pikachu headphones"
               />
             </div>
@@ -320,7 +320,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/charizard/charizard_plush.jpeg"
+                src="./assets/images/charizard/charizard_plush.jpeg"
                 alt="Charizard plush"
               />
             </div>
@@ -355,7 +355,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/charizard/charizard_mug.jpeg"
+                src="./assets/images/charizard/charizard_mug.jpeg"
                 alt="pikachu headphones"
               />
             </div>
@@ -390,7 +390,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/charizard/charizard_sweater.jpeg"
+                src="./assets/images/charizard/charizard_sweater.jpeg"
                 alt="pikachu sweater"
               />
             </div>
@@ -425,7 +425,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/charizard/charizard_controller.png"
+                src="./assets/images/charizard/charizard_controller.png"
                 alt="Charizard controller"
               />
             </div>
@@ -462,7 +462,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./images/squirtle/plush.jpeg" alt="Squirtle plush" />
+              <img src="./assets/images/squirtle/plush.jpeg" alt="Squirtle plush" />
             </div>
             <div class="titleBox">
               <h6>Pokemon 8" Plush - Squirtle</h6>
@@ -494,7 +494,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./images/squirtle/mug.jpeg" alt="Squirtle mug" />
+              <img src="./assets/images/squirtle/mug.jpeg" alt="Squirtle mug" />
             </div>
             <div class="titleBox">
               <h6>Pokemon Squirtle Squad Coffee Mug</h6>
@@ -527,7 +527,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./images/squirtle/ugly_sweater.jpeg"
+                src="./assets/images/squirtle/ugly_sweater.jpeg"
                 alt="squirtle ugly sweater"
               />
             </div>
@@ -561,7 +561,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./images/squirtle/iphone_case.jpeg" alt="iphone case" />
+              <img src="./assets/images/squirtle/iphone_case.jpeg" alt="iphone case" />
             </div>
             <div class="titleBox">
               <h6>Pixel Squirtle iPhone 13 Impact Case</h6>
@@ -596,7 +596,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./images/eevee/plush.jpg" alt="Eevee plush" />
+              <img src="./assets/images/eevee/plush.jpg" alt="Eevee plush" />
             </div>
             <div class="titleBox">
               <h6>Pokemon 18” Plush Sleeping Eevee- Cuddly</h6>
@@ -628,7 +628,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./images/eevee/folder.jpeg" alt="Eevee folder" />
+              <img src="./assets/images/eevee/folder.jpeg" alt="Eevee folder" />
             </div>
             <div class="titleBox">
               <h6>Pokemon Center A4 Size Eevee Folder</h6>
@@ -660,7 +660,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./images/eevee/sweater.jpeg" alt="eevee ugly sweater" />
+              <img src="./assets/images/eevee/sweater.jpeg" alt="eevee ugly sweater" />
             </div>
             <div class="titleBox">
               <h6>Pokemon Eevee Ugly Christmas Sweater</h6>
@@ -692,7 +692,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./images/eevee/chair.jpeg" alt="eevee chair" />
+              <img src="./assets/images/eevee/chair.jpeg" alt="eevee chair" />
             </div>
             <div class="titleBox">
               <h6>Eevee Pokemon Doll House Chair</h6>
