--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>About</title>
-  <link rel="icon" type="image/x-icon" href="pokeball.png">
+  <link rel="icon" type="image/x-icon" href="./assets/pokeball.png">
 
 
   <!-- Custom CSS -->
@@ -49,7 +49,7 @@
 
     <!-- Background image -->
     <div class="p-5 text-center bg-image" style="
-      background-image: url('aboutBanner.png');
+      background-image: url('./assets/aboutBanner.png');
       height: 400px; 
       background-size: cover;
       background-position: relative;">
@@ -68,7 +68,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="index.html">
-      <img src="./pokeIcons/pokedexIcon.png" height="30" class="d-inline-block align-top" alt="">
+      <img src="./assets/pokeIcons/pokedexIcon.png" height="30" class="d-inline-block align-top" alt="">
       Home
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -79,19 +79,19 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="store.html">
-            <img src="./pokeIcons/poke-storeIcon.png " height="30" class="d-inline-block align-top" alt="">
+            <img src="./assets/pokeIcons/poke-storeIcon.png " height="30" class="d-inline-block align-top" alt="">
             Store
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">
-            <img src="./pokeIcons/poke-wingIcon.png" height="30" class="d-inline-block align-top" alt="">
+            <img src="./assets/pokeIcons/poke-wingIcon.png" height="30" class="d-inline-block align-top" alt="">
             About
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="pokemon.html">
-            <img src="./pokeIcons/pokemon-icon.png" height="30" class="d-inline-block align-top" alt="">
+            <img src="./assets/pokeIcons/pokemon-icon.png" height="30" class="d-inline-block align-top" alt="">
             Pokedex
           </a>
         </li>
@@ -189,14 +189,14 @@
       </div>
       <div class="row">
         <div class="col-md-3 hover1">
-          <a href="" target="https://www.pokemon.com/us/pokedex/blaziken"><img src="blazikenA.jpg" alt="Blaziken"></a>
+          <a href="" target="https://www.pokemon.com/us/pokedex/blaziken"><img src="./assets/blazikenA.jpg" alt="Blaziken"></a>
           <h3>Miles Booker</h3>
           <p>Blaziken is the Fire/Fighting-type Starter Pokémon of the Hoenn region, introduced in Generation III. From
             Generation VI onwards it can Mega Evolve. Blaziken is one of my favorites, and I always have Blaziken with
             me whenever we need to kick through some BADDIES!</p>
         </div>
         <div class="col-md-3 hover2">
-          <a href="" target="https://www.pokemon.com/us/pokedex/pikachu"><img src="pikachuA.jpg" alt="Pikachu"></a>
+          <a href="" target="https://www.pokemon.com/us/pokedex/pikachu"><img src="./assets/pikachuA.jpg" alt="Pikachu"></a>
           <h3>Lupe Aguirre</h3>
           <p>Pikachu is a yellow, mouse-like creature with electrical abilities. And I mean, everybody knows Pikachu.
             Pikachu is absolutely adorable and is always by my side during any battle. I pretty sure everyone loves
@@ -204,14 +204,14 @@
         </div>
         <div class="col-md-3 hover3">
           <a href="" target="https://www.pokemon.com/us/pokedex/blastoise"><img class="fade-out-image"
-              src="blastoiseA.jpg" alt="Blastoise"></a>
+              src="./assets/blastoiseA.jpg" alt="Blastoise"></a>
           <h3>David Wilson</h3>
           <p>Blastoise is a Water-type Pokémon introduced in Generation I. Blastoise is the evolved form of Wartortle,
             and the final evolution of Squirtle. It is also the version mascot for Pokémon Blue. And by all definitions,
             Blastoise is the MAN. I would totally be bros with him in real life.</p>
         </div>
         <div class="col-md-3 hover4">
-          <a href="" target="https://www.pokemon.com/us/pokedex/greavard"><img src="greavardA.jpg" alt="Greavard"></a>
+          <a href="" target="https://www.pokemon.com/us/pokedex/greavard"><img src="./assets/greavardA.jpg" alt="Greavard"></a>
           <h3>Neveah Perry</h3>
           <p><em>Whos a good little puppy</em> Greavard is a Ghost-type Pokémon introduced in Generation IX. It evolves
             into Houndstone when leveled up at night starting at level 30. And I mean, Greavard beats Pikachu in
