--- a/store.html
+++ b/store.html
@@ -166,7 +166,9 @@
             <h3>Squirtle</h3>
           </div>
           <div class="col-md-3 icons" id="eeveeIcon">
-            <a href="#sectionEevee"><img src="./assets/images/icons/eevee.png" /></a>
+            <a href="#sectionEevee"
+              ><img src="./assets/images/icons/eevee.png"
+            /></a>
             <h3>Eevee</h3>
           </div>
         </div>
@@ -462,7 +464,10 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./assets/images/squirtle/plush.jpeg" alt="Squirtle plush" />
+              <img
+                src="./assets/images/squirtle/plush.jpeg"
+                alt="Squirtle plush"
+              />
             </div>
             <div class="titleBox">
               <h6>Pokemon 8" Plush - Squirtle</h6>
@@ -561,7 +566,10 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./assets/images/squirtle/iphone_case.jpeg" alt="iphone case" />
+              <img
+                src="./assets/images/squirtle/iphone_case.jpeg"
+                alt="iphone case"
+              />
             </div>
             <div class="titleBox">
               <h6>Pixel Squirtle iPhone 13 Impact Case</h6>
@@ -660,7 +668,10 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./assets/images/eevee/sweater.jpeg" alt="eevee ugly sweater" />
+              <img
+                src="./assets/images/eevee/sweater.jpeg"
+                alt="eevee ugly sweater"
+              />
             </div>
             <div class="titleBox">
               <h6>Pokemon Eevee Ugly Christmas Sweater</h6>
