Moved CSS files to Styles Folder

--- a/pikachuBuy.html
+++ b/pikachuBuy.html
@@ -23,13 +23,13 @@
     crossorigin="anonymous"></script>
 
   <!-- My Custom CSS -->
-  <link href="pikachuBuy.css" rel="stylesheet" type="text/css" />
+  <link href="./styles/pikachuBuy.css" rel="stylesheet" type="text/css" />
 
   <!-- Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="./styles/style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Rubik+80s+Fade&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
