--- a/pokemon.html
+++ b/pokemon.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/pokeball.png" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
 
     <!--   Bootstrap -->
     <link
@@ -44,7 +44,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Rubik+80s+Fade&display=swap"
       rel="stylesheet"
