move html files to /src

--- a/src/pikachuBuy.html
+++ b/src/pikachuBuy.html
@@ -23,13 +23,13 @@
     crossorigin="anonymous"></script>
 
   <!-- My Custom CSS -->
-  <link href="./styles/pikachuBuy.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/pikachuBuy.css" rel="stylesheet" type="text/css" />
 
   <!-- Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-  <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Rubik+80s+Fade&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -58,25 +58,25 @@
               <!-- Preview Image 1 -->
               <div class="row justify-content-center">
                 <div class="col-md-10 border preview">
-                  <img src="./assets/images/pikachu/plush/plush1.jpg" onclick="myFunction(this);">
+                  <img src="../assets/images/pikachu/plush/plush1.jpg" onclick="myFunction(this);">
                 </div>
               </div>
               <!-- Preview Image 2 -->
               <div class="row justify-content-center">
                 <div class="col-md-10 border preview">
-                  <img src="./assets/images/pikachu/plush/plush2.jpg" onclick="myFunction(this);">
+                  <img src="../assets/images/pikachu/plush/plush2.jpg" onclick="myFunction(this);">
                 </div>
               </div>
               <!-- Peview Image 3 -->
               <div class="row justify-content-center">
                 <div class="col-md-10 border preview">
-                  <img src="./assets/images/pikachu/plush/plush3.jpg" onclick="myFunction(this);">
+                  <img src="../assets/images/pikachu/plush/plush3.jpg" onclick="myFunction(this);">
                 </div>
               </div>
             </div>
             <!-- Actual Image -->
             <div class="col-md-6 justify-content-center my-auto ">
-              <img id="expandedImg" src="./assets/images/pikachu/plush/plush1.jpg">
+              <img id="expandedImg" src="../assets/images/pikachu/plush/plush1.jpg">
             </div>
           </div>
           <!-- Row -->
@@ -255,7 +255,7 @@
                 </div>
               </div>
               <hr class="mb-4">
-              <a href="confirmation.html" <button class="btn btn-primary btn-lg btn-block" type="submit">
+              <a href="./confirmation.html"> <button class="btn btn-primary btn-lg btn-block" type="submit">
                 Continue to checkout</button>
               </a>
 
