--- a/src/store.html
+++ b/src/store.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Poke-Store</title>
-    <link rel="icon" type="image/x-icon" href="./assets/pokeball.png" />
+    <link rel="icon" type="image/x-icon" href="../assets/pokeball.png" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="./styles/store.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/store.css" />
 
     <!--   Bootstrap -->
     <link
@@ -44,7 +44,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
-    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Rubik+80s+Fade&display=swap"
       rel="stylesheet"
@@ -77,9 +77,9 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="./index.html">
         <img
-          src="./assets/pokeIcons/pokedexIcon.png"
+          src="../assets/pokeIcons/pokedexIcon.png"
           height="30"
           class="d-inline-block align-top"
           alt=""
@@ -100,9 +100,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="store.html">
+            <a class="nav-link" href="./store.html">
               <img
-                src="./assets/pokeIcons/poke-storeIcon.png "
+                src="../assets/pokeIcons/poke-storeIcon.png "
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -111,9 +111,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">
+            <a class="nav-link" href="./about.html">
               <img
-                src="./assets/pokeIcons/poke-wingIcon.png"
+                src="../assets/pokeIcons/poke-wingIcon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -122,9 +122,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pokemon.html">
+            <a class="nav-link" href="./pokemon.html">
               <img
-                src="./assets/pokeIcons/pokemon-icon.png"
+                src="../assets/pokeIcons/pokemon-icon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -149,25 +149,25 @@
         <div class="row justify-content-center">
           <div class="col-md-3 icons" id="pikachuIcon">
             <a href="#sectionPikachu"
-              ><img src="./assets/images/icons/pikachu.png"
+              ><img src="../assets/images/icons/pikachu.png"
             /></a>
             <h3>Pikachu</h3>
           </div>
           <div class="col-md-3 icons" id="charizardIcon">
             <a href="#sectionCharizard"
-              ><img src="./assets/images/icons/charizard.png"
+              ><img src="../assets/images/icons/charizard.png"
             /></a>
             <h3>Charizard</h3>
           </div>
           <div class="col-md-3 icons" id="squirtleIcon">
             <a href="#sectionSquirtle"
-              ><img src="./assets/images/icons/squirtle.png"
+              ><img src="../assets/images/icons/squirtle.png"
             /></a>
             <h3>Squirtle</h3>
           </div>
           <div class="col-md-3 icons" id="eeveeIcon">
             <a href="#sectionEevee"
-              ><img src="./assets/images/icons/eevee.png"
+              ><img src="../assets/images/icons/eevee.png"
             /></a>
             <h3>Eevee</h3>
           </div>
@@ -180,7 +180,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/pikachu/pikachu_charizard_plush.jpeg"
+                src="../assets/images/pikachu/pikachu_charizard_plush.jpeg"
                 alt="pikchu charizard themed plush"
               />
             </div>
@@ -202,7 +202,7 @@
               </div>
             </div>
             <div class="buyBox">
-              <a href="pikachuBuy.html" target="_blank"
+              <a href="./pikachuBuy.html" target="_blank"
                 ><button type="button" class="btn btn-outline-dark btn-block">
                   Buy
                 </button></a
@@ -213,7 +213,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/pikachu/pikachu_binder.jpeg"
+                src="../assets/images/pikachu/pikachu_binder.jpeg"
                 alt="pikachu binder"
               />
             </div>
@@ -248,7 +248,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/pikachu/pikachu_sweater.jpg"
+                src="../assets/images/pikachu/pikachu_sweater.jpg"
                 alt="pikachu sweater"
               />
             </div>
@@ -283,7 +283,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/pikachu/pikachu_headphones.jpg"
+                src="../assets/images/pikachu/pikachu_headphones.jpg"
                 alt="pikachu headphones"
               />
             </div>
@@ -322,7 +322,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/charizard/charizard_plush.jpeg"
+                src="../assets/images/charizard/charizard_plush.jpeg"
                 alt="Charizard plush"
               />
             </div>
@@ -357,7 +357,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/charizard/charizard_mug.jpeg"
+                src="../assets/images/charizard/charizard_mug.jpeg"
                 alt="pikachu headphones"
               />
             </div>
@@ -392,7 +392,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/charizard/charizard_sweater.jpeg"
+                src="../assets/images/charizard/charizard_sweater.jpeg"
                 alt="pikachu sweater"
               />
             </div>
@@ -427,7 +427,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/charizard/charizard_controller.png"
+                src="../assets/images/charizard/charizard_controller.png"
                 alt="Charizard controller"
               />
             </div>
@@ -465,7 +465,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/squirtle/plush.jpeg"
+                src="../assets/images/squirtle/plush.jpeg"
                 alt="Squirtle plush"
               />
             </div>
@@ -499,7 +499,10 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./assets/images/squirtle/mug.jpeg" alt="Squirtle mug" />
+              <img
+                src="../assets/images/squirtle/mug.jpeg"
+                alt="Squirtle mug"
+              />
             </div>
             <div class="titleBox">
               <h6>Pokemon Squirtle Squad Coffee Mug</h6>
@@ -532,7 +535,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/squirtle/ugly_sweater.jpeg"
+                src="../assets/images/squirtle/ugly_sweater.jpeg"
                 alt="squirtle ugly sweater"
               />
             </div>
@@ -567,7 +570,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/squirtle/iphone_case.jpeg"
+                src="../assets/images/squirtle/iphone_case.jpeg"
                 alt="iphone case"
               />
             </div>
@@ -604,7 +607,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./assets/images/eevee/plush.jpg" alt="Eevee plush" />
+              <img src="../assets/images/eevee/plush.jpg" alt="Eevee plush" />
             </div>
             <div class="titleBox">
               <h6>Pokemon 18” Plush Sleeping Eevee- Cuddly</h6>
@@ -636,7 +639,10 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./assets/images/eevee/folder.jpeg" alt="Eevee folder" />
+              <img
+                src="../assets/images/eevee/folder.jpeg"
+                alt="Eevee folder"
+              />
             </div>
             <div class="titleBox">
               <h6>Pokemon Center A4 Size Eevee Folder</h6>
@@ -669,7 +675,7 @@
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
               <img
-                src="./assets/images/eevee/sweater.jpeg"
+                src="../assets/images/eevee/sweater.jpeg"
                 alt="eevee ugly sweater"
               />
             </div>
@@ -703,7 +709,7 @@
           <!-- Column -->
           <div class="col-lg border border-secondary rounded product">
             <div class="box small">
-              <img src="./assets/images/eevee/chair.jpeg" alt="eevee chair" />
+              <img src="../assets/images/eevee/chair.jpeg" alt="eevee chair" />
             </div>
             <div class="titleBox">
               <h6>Eevee Pokemon Doll House Chair</h6>
