--- a/src/confirmation.html
+++ b/src/confirmation.html
@@ -25,10 +25,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="./assets/pokeball.png" />
+    <link rel="icon" type="image/x-icon" href="../assets/pokeball.png" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
 
     <!--   Bootstrap -->
     <link
@@ -64,7 +64,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
-    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Rubik+80s+Fade&display=swap"
       rel="stylesheet"
@@ -80,9 +80,9 @@
 
   <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="./index.html">
         <img
-          src="./assets/pokeIcons/pokedexIcon.png"
+          src="../assets/pokeIcons/pokedexIcon.png"
           height="30"
           class="d-inline-block align-top"
           alt=""
@@ -103,9 +103,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="store.html">
+            <a class="nav-link" href="./store.html">
               <img
-                src="./assets/pokeIcons/poke-storeIcon.png "
+                src="../assets/pokeIcons/poke-storeIcon.png "
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -114,9 +114,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">
+            <a class="nav-link" href="./about.html">
               <img
-                src="./assets/pokeIcons/poke-wingIcon.png"
+                src="../assets/pokeIcons/poke-wingIcon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -125,9 +125,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pokemon.html">
+            <a class="nav-link" href="./pokemon.html">
               <img
-                src="./assets/pokeIcons/pokemon-icon.png"
+                src="../assets/pokeIcons/pokemon-icon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
