--- a/src/pokemon.html
+++ b/src/pokemon.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="./assets/pokeball.png" />
+    <link rel="icon" type="image/x-icon" href="../assets/pokeball.png" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
 
     <!--   Bootstrap -->
     <link
@@ -44,7 +44,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
-    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Rubik+80s+Fade&display=swap"
       rel="stylesheet"
@@ -64,7 +64,7 @@
       <div
         class="p-5 text-center bg-image"
         style="
-          background-image: url('./assets/New\ Project.png');
+          background-image: url('../assets/New\ Project.png');
           height: 400px;
           background-size: cover;
           background-position: relative;
@@ -84,9 +84,9 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="./index.html">
         <img
-          src="./assets/pokeIcons/pokedexIcon.png"
+          src="../assets/pokeIcons/pokedexIcon.png"
           height="30"
           class="d-inline-block align-top"
           alt=""
@@ -107,9 +107,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="store.html">
+            <a class="nav-link" href="./store.html">
               <img
-                src="./assets/pokeIcons/poke-storeIcon.png "
+                src="../assets/pokeIcons/poke-storeIcon.png "
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -118,9 +118,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">
+            <a class="nav-link" href="./about.html">
               <img
-                src="./assets/pokeIcons/poke-wingIcon.png"
+                src="../assets/pokeIcons/poke-wingIcon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -129,9 +129,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pokemon.html">
+            <a class="nav-link" href="./pokemon.html">
               <img
-                src="./assets/pokeIcons/pokemon-icon.png"
+                src="../assets/pokeIcons/pokemon-icon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
