Update Banner and Move index.html

--- a/src/confirmation.html
+++ b/src/confirmation.html
@@ -80,7 +80,7 @@
 
   <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="../index.html">
         <img
           src="../assets/pokeIcons/pokedexIcon.png"
           height="30"
