--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="../assets/pokeball.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/pokeball.png" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="../styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
 
     <!--   Bootstrap -->
     <link
@@ -44,7 +44,7 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
-    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Rubik+80s+Fade&display=swap"
       rel="stylesheet"
@@ -64,7 +64,7 @@
       <div
         class="p-5 text-center bg-image"
         style="
-          background-image: url('../assets/homebanner.png');
+          background-image: url('./assets/homebanner.png');
           height: 400px;
           background-size: cover;
           background-position: relative;
@@ -85,7 +85,7 @@
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
       <a class="navbar-brand" href="./index.html">
         <img
-          src="../assets/pokeIcons/pokedexIcon.png"
+          src="./assets/pokeIcons/pokedexIcon.png"
           height="30"
           class="d-inline-block align-top"
           alt=""
@@ -106,9 +106,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="./store.html">
+            <a class="nav-link" href="./src/store.html">
               <img
-                src="../assets/pokeIcons/poke-storeIcon.png "
+                src="./assets/pokeIcons/poke-storeIcon.png "
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -117,9 +117,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./about.html">
+            <a class="nav-link" href="./src/about.html">
               <img
-                src="../assets/pokeIcons/poke-wingIcon.png"
+                src="./assets/pokeIcons/poke-wingIcon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -128,9 +128,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pokemon.html">
+            <a class="nav-link" href="./src/pokemon.html">
               <img
-                src="../assets/pokeIcons/pokemon-icon.png"
+                src="./assets/pokeIcons/pokemon-icon.png"
                 height="30"
                 class="d-inline-block align-top"
                 alt=""
@@ -179,7 +179,7 @@
       </div>
       <div class="row" id="grad1">
         <div class="col-md-6">
-          <img src="../assets/pik.png" alt="Pikachu" />
+          <img src="./assets/pik.png" alt="Pikachu" />
         </div>
         <div class="col-md-6 videoFormat">
           <div class="iframe-container">
