--- a/src/store.html
+++ b/src/store.html
@@ -77,7 +77,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="../index.html">
         <img
           src="../assets/pokeIcons/pokedexIcon.png"
           height="30"
